--- a/package.json
+++ b/package.json
@@ -15,28 +15,28 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.4.10",
-    "expo": "~54.0.13",
+    "expo": "54.0.20",
     "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
+    "expo-image": "~3.0.10",
     "expo-linking": "~8.0.8",
     "expo-location": "^19.0.7",
-    "expo-router": "~6.0.11",
+    "expo-router": "~6.0.13",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
     "graphql-request": "^7.3.0",
     "moment": "^2.30.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
